RESOLVED FIXED112307
IndexedDB: Histogram leveldb open errors.
https://bugs.webkit.org/show_bug.cgi?id=112307
Summary IndexedDB: Histogram leveldb open errors.
David Grogan
Reported 2013-03-13 18:23:33 PDT
IndexedDB: Histogram leveldb open errors.
Attachments
Patch (2.17 KB, patch)
2013-03-13 18:26 PDT, David Grogan
no flags
David Grogan
Comment 1 2013-03-13 18:26:19 PDT
David Grogan
Comment 2 2013-03-13 18:26:49 PDT
Josh, could you give this a look?
Joshua Bell
Comment 3 2013-03-13 18:33:03 PDT
Comment on attachment 193035 [details] Patch Lgtm
David Grogan
Comment 4 2013-03-13 19:15:51 PDT
Tony, r?
WebKit Review Bot
Comment 5 2013-03-14 10:11:01 PDT
Comment on attachment 193035 [details] Patch Clearing flags on attachment: 193035 Committed r145824: <http://trac.webkit.org/changeset/145824>
WebKit Review Bot
Comment 6 2013-03-14 10:11:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.