IndexedDB: Histogram leveldb open errors. https://bugs.webkit.org/show_bug.cgi?id=112307

Reviewed by Tony Chang.

No new tests, I don't know if there's a good way to test histograms.

* platform/leveldb/LevelDBDatabase.cpp:
(WebCore::LevelDBDatabase::open):


git-svn-id: svn://svn.chromium.org/blink/trunk@145824 bbb929c8-8fbe-4397-9dbb-9b2b20218538